--- a/task-07/header.css
+++ b/task-07/header.css
@@ -1,18 +1,20 @@
 header {
-    position: relative;
     height: 370px;
-}
-
-header > img {
-    position: absolute;
+    display: grid;
+    grid-template-columns: 1fr 125px 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    align-items: center;
+    justify-content: center;
 }
 
 header > img:nth-child(1) {
     opacity: 25%;
     width: 1280px;
+    grid-column: 1 / 4;
+    grid-row: 1 / 3;
 }
 
 header > img:nth-child(2) {
-    top: 140px;
-    left: 585px;
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
 }
