--- a/task-07/style.css
+++ b/task-07/style.css
@@ -19,3 +19,32 @@ body {
 button {
     cursor: pointer;
 }
+
+@media screen and (max-width:996px) {
+    header {
+        grid-template-columns: minmax(200px, 577.5px) minmax(75, max-content) minmax(200px, 577.5px);
+        grid-template-rows: 1fr minmax(75px, max-content) 1fr;
+    }
+
+    header > img:nth-child(1) {
+        opacity: 25%;
+        grid-column: 1 / 4;
+        grid-row: 1 / 3;
+    }
+
+    header > img:nth-child(2) {
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+        width: 100%;
+        object-fit: contain;
+    }
+
+    footer {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-left: unset;
+    }
+    
+}
