--- a/task-23/style.css
+++ b/task-23/style.css
@@ -4,6 +4,12 @@
     font-family: 'Roboto', sans-serif;
 }
 
+.container2x {
+    position: relative;
+    width: 420px;
+    margin: auto;
+}
+
 .container {
     width: 420px;
     height: 880px;
@@ -12,7 +18,7 @@
     position: relative;
 }
 
-.navbar>img {
+.navbar > img {
     width: 20px;
     height: 12px;
     position: absolute;
@@ -69,13 +75,13 @@
     border-radius: 5px;
     border: 1px solid black;
     padding: 8px 18px;
-    transition: ease 0.7s;
+    transition: all 0.5s;
 }
 
 .top-photos > button:hover {
     background-color: black;
     color: white;
-    transition: ease 0.7s;
+    transition: all 0.5s;
 }
 
 .wrapper {
@@ -83,7 +89,7 @@
     overflow-x: scroll;
     margin-bottom: -16px;
     margin-top: 20px;
-    margin-bottom: -30px;
+    margin-bottom: -16px;
 }
 
 .wrapper::-webkit-scrollbar {
@@ -198,3 +204,144 @@
     font-size: 10px;
     color: grey;
 }
+
+.dropdown {
+    display: none;
+    position: absolute;
+    top: 0;
+    background-color: white;
+    height: 900px;
+}
+
+.order {
+    overflow: hidden;
+    position: relative;
+    /* border-bottom: 1px solid rgba(128, 128, 128, 0.653); */
+}
+
+.order > #orderimg {
+    width: 420px;
+    border-radius: 50%;
+    margin-bottom: -160px;
+    margin-top: 40px;
+}
+
+.dropdown > #button {
+    width: 20px;
+    /* z-index: 999; */
+}
+
+.dropdown > .content {
+    position: relative;
+}
+
+.dropdown > .content > img {
+    width: 18px;
+    position: absolute;
+    right: 0;
+    top: 90px;
+}
+
+.dropdown > .content > .blur {
+    margin-top: -50px;
+    background-color: rgba(255, 255, 255, 0.648);
+    backdrop-filter: blur(2px);
+}
+
+.dropdown > .content > .blur > #bold {
+    font-size: 38px;
+    font-weight: 600;
+}
+
+.dropdown > .content > p {
+    color: grey;
+}
+
+.dropdown > .content > p:nth-child(3) {
+    margin-top: -13px;
+}
+
+.dropdown > .content > p:nth-child(4) {
+    margin-top: 30px;
+}
+
+.composition {
+    width: 380px;
+    display: flex;
+    gap: 50px;
+    margin: 10px 0;
+}
+
+.composition #main {
+    font-weight: 700;
+}
+
+.composition #number {
+    font-size: 13px;
+    color: grey;
+    margin-top: -1px;
+}
+
+.meal > .middle > div {
+    display: inline-block;
+}
+
+.meal > .middle {
+    display: flex;
+    justify-content: space-between;
+}
+
+.meal > .middle > .right > div {
+    margin-top: 13px;
+}
+
+.meal > .middle > .right > div > label {
+    margin-right: 20px;
+}
+
+.meal > .middle > .right > div > input {
+    width: 20px;
+    height: 17px;
+}
+
+.meal > .middle > .left > p:nth-child(2) {
+    margin-top: 20px;
+}
+
+.meal > .amount {
+    text-align: end;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.cart {
+    display: flex;
+    gap: 28px;
+}
+
+.cart > label {
+    font-size: 18px;
+    margin-top: 12px;
+}
+
+.cart > img {
+    width: 20px;
+    height:20px;
+    margin-top: 12px;
+}
+
+.cart > button {
+    padding: 10px 98px;
+    font-weight: 900;
+    border-radius: 10px;
+    border: 2px solid black;
+    background-color: white;
+    transition: all 0.5s;
+
+}
+
+.cart > button:hover {
+    background-color: black;
+    color: white;
+    transition: all 0.5s;
+} 
