updated js project

--- a/task-24-js-finaltask/responsive.css
+++ b/task-24-js-finaltask/responsive.css
@@ -133,4 +133,11 @@
     .condition-work {
         display: none;
     }
+    .mobile-work {
+        display: block;
+    }
+    /* .mobile-work > .conditions {
+        height: 100%;
+        overflow-y: scroll;
+    } */
 }
