--- a/task-24-js-finaltask/style.css
+++ b/task-24-js-finaltask/style.css
@@ -385,7 +385,8 @@ button:hover {
     width: 30%;
     position: absolute;
     top: 70px;
-    left: 190px;
+    left: 50%;
+    transform: translateX(-50%);
     z-index: 1;
     border: 1px solid rgba(128, 128, 128, 0.189);
 }
@@ -558,7 +559,7 @@ button:hover {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    overflow: hidden;
+    
     display: flex;
     align-items: center;
     justify-content: center;
